--- a/lib/scss/reponsive.css
+++ b/lib/scss/reponsive.css
@@ -12,7 +12,22 @@
         margin-bottom: 28px; }
       .content div.create .container div.create-inner div.create-content div.create-control .btn {
         max-width: 167px;
-        height: 56px; } }
+        height: 56px; }
+
+  .content div.video .container {
+    max-width: 900px; }
+
+  .content div.video .container div.video-wrap {
+    padding: 96px 0 0; }
+
+  .content div.introduce {
+    margin-top: -77px; }
+
+  .content div.video .container div.video-wrap div.video-clip div.video-text {
+    left: 12%; }
+
+  .footer-content .footer-logo {
+    flex: 1; } }
 @media (max-width: 1024px) {
   .header {
     padding-top: 16px; }
@@ -30,7 +45,22 @@
 
   .header .container .header-wrap .header-logo span {
     font-size: 30px;
-    margin-left: 10px; } }
+    margin-left: 10px; }
+
+  .footer-content .footer-logo span {
+    font-size: 22px; }
+
+  .info-content a {
+    font-size: 15px; }
+
+  .footer-content {
+    padding: 0 50px 74px; }
+
+  .copyright {
+    padding-top: 25px; }
+
+  .copyright span {
+    font-size: 14px; } }
 @media (max-width: 830px) {
   .content div.create .container div.create-inner {
     padding: 70px 0 0 0; }
@@ -50,7 +80,174 @@
     max-width: 144px; }
 
   .content div.create {
-    margin-bottom: 90px; } }
+    margin-bottom: 90px; }
+
+  .content div.video .container {
+    max-width: 646px; }
+
+  .content div.video .container div.video-wrap div.video-clip img {
+    height: 347px; }
+
+  .content div.video .container div.video-wrap div.video-clip div.video-text h1 {
+    font-size: 38px;
+    margin-bottom: 41px; }
+
+  .content div.video .container div.video-wrap div.video-clip div.video-text {
+    left: 16%; }
+
+  .content div.video .container div.video-wrap div.video-clip div.video-text .btn {
+    margin: 0;
+    max-width: 132px;
+    height: 42px;
+    font-size: 15px; }
+
+  .swiper-button-next::after, .swiper-button-prev::after {
+    padding: 20px;
+    height: 44px;
+    font-size: 15px;
+    line-height: 4px; }
+
+  .content div.introduce {
+    margin-top: -55px; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-box,
+  .content div.introduce .container div.introduce-inner div.introduce-content {
+    margin: 0;
+    padding: 0 15px;
+    max-width: 33.3333%;
+    flex: 0 0 33.3333%; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-box div.introduce-text {
+    padding: 16px;
+    font-size: 14px; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-content h2 {
+    font-size: 28px;
+    line-height: 31px;
+    margin-bottom: 17px;
+    padding-top: 98px; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-content p {
+    font-size: 14px;
+    line-height: 20px; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-box:nth-child(2) {
+    padding-top: 54px; }
+
+  .content div.introduce .container div.introduce-inner {
+    padding: 200px 0 78px; }
+
+  .content .user .container .user-list {
+    margin: 0 5px 40px;
+    position: relative; }
+
+  .content .user .container .user-list .user-item {
+    max-width: 33.3333%;
+    flex: 0 0 33.3333%;
+    padding: 0 10px; }
+
+  .content .user .container .user-list .user-item .user-inner img {
+    height: 175px; }
+
+  .content .user .container .user-list .user-item .user-inner .user-text h3 {
+    font-size: 26px;
+    line-height: 26px;
+    letter-spacing: 1.05px; }
+
+  .content .user .container .user-list .user-item .user-inner .user-text span {
+    font-size: 16px;
+    line-height: 22px; }
+
+  .content .user {
+    padding-top: 24px; }
+
+  .content div.register .container {
+    max-width: 622px; }
+
+  .content div.register .container h1 {
+    font-size: 28px;
+    line-height: 36px;
+    margin-bottom: 25px; }
+
+  .content div.register .container div.register-controls div.register-input {
+    max-width: 275px;
+    height: 100%; }
+
+  .content div.register .container div.register-controls div.register-input input {
+    height: 42px; }
+
+  .content div.register .container div.register-controls div.register-input input::placeholder {
+    font-size: 14px; }
+
+  .content div.register .container div.register-controls button {
+    max-width: 144px;
+    height: 42px;
+    font-size: 14px;
+    line-height: 0;
+    margin: 0 0 0 17px; }
+
+  .content div.register .container div.register-controls {
+    font-size: 13px; }
+
+  .content div.register .container span {
+    font-size: 16px;
+    margin-bottom: 50px; }
+
+  .content .brand .container ul.brand-list {
+    margin-bottom: 98px; }
+
+  .content .brand .container {
+    max-width: 646px; }
+
+  .content .brand .container h1 {
+    font-size: 26px;
+    line-height: 28px; }
+
+  .content .brand .container ul.brand-list li.brand-item img {
+    max-width: 104px; }
+
+  .content .plan {
+    text-align: center;
+    padding: 45px 0 59px; }
+
+  .content .plan .container h1 {
+    font-size: 42px;
+    line-height: 56px;
+    letter-spacing: 1.05px; }
+
+  .content .plan .container .btn {
+    max-width: 131px;
+    height: 42px;
+    font-size: 15px; }
+
+  .footer .container {
+    max-width: 742px; }
+
+  .footer-content {
+    display: flex;
+    padding: 0 46px 49px; }
+
+  .footer-content .footer-logo {
+    flex: 1; }
+
+  .footer-content .footer-logo img {
+    margin-top: 6px;
+    width: 30px; }
+
+  .footer-content .footer-logo span {
+    font-size: 20px; }
+
+  .info-content a {
+    font-size: 14px; }
+
+  .copyright {
+    padding-top: 25px; }
+
+  .footer .container .footer-inner {
+    padding: 47px 0 30px; }
+
+  .copyright span {
+    font-size: 11px; } }
 @media (max-width: 786px) {
   .content div.create .container div.create-inner div.create-content h1 {
     font-size: 41px;
@@ -113,7 +310,11 @@
 
   .content div.create .container div.create-inner div.create-image {
     text-align: right;
-    height: 250px; } }
+    height: 250px; }
+
+  .footer-content {
+    display: flex;
+    padding: 0 26px 49px; } }
 @media (max-width: 668px) {
   .content div.create .container div.create-inner div.create-image img {
     width: 57.5%;
