--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -273,6 +273,7 @@ button {
 // Header SCSS
 .header {
     padding-top: 20px;
+    z-index: 9999;
     .container {
         max-width: 1270px;
         width: 100%;
@@ -323,9 +324,9 @@ button {
                             content: '';
                             display: inline-block;
                             top: 0%;
-                            right: 0px;
-                            width: 28px;
-                            height: 100%;
+                            right: 70px;
+                            width: 20px;
+                            height: 68%;
                             background-color: #fff;
                             animation: shiny-btn1 3s linear infinite;
                         }
@@ -409,6 +410,17 @@ button {
             }
         }
     }
+}
+
+.fixed-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background: $white-color;
+    padding-bottom: 20px;
+    box-shadow: 0 0px 10px #0000001c;
 }
 
 // Content SCSS
@@ -629,6 +641,7 @@ button {
                     img {
                         -webkit-transition: 0.4s ease;
                         transition: 0.4s ease;
+                        width: 100%;
                     }
                      
                     &:nth-child(2) {
@@ -738,7 +751,8 @@ button {
                             position: absolute;
                             bottom: 0;
                             left: 27px;
-                
+                            text-shadow: 0 0 12px #000;
+
                             h3 {
                                 font: {
                                     family: 'Raleway';
@@ -1022,6 +1036,7 @@ button {
     padding-top: 39px;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 
     span {
         font: {
