--- a/lib/scss/reponsive.css
+++ b/lib/scss/reponsive.css
@@ -23,9 +23,6 @@
   .content div.introduce {
     margin-top: -77px; }
 
-  .content div.video .container div.video-wrap div.video-clip div.video-text {
-    left: 12%; }
-
   .footer-content .footer-logo {
     flex: 1; } }
 @media (max-width: 1024px) {
@@ -61,6 +58,16 @@
 
   .copyright span {
     font-size: 14px; } }
+@media (max-width: 992px) {
+  .content div.video .container div.video-wrap div.video-clip div.video-text h1 {
+    font-size: 52px; }
+
+  .content .user .container .user-list .user-item {
+    max-width: 33.3333%;
+    flex: 0 0 33.3333%; }
+
+  .content .user .container .user-list .user-item .user-inner img {
+    height: 186px; } }
 @media (max-width: 830px) {
   .content div.create .container div.create-inner {
     padding: 70px 0 0 0; }
@@ -92,9 +99,6 @@
     font-size: 38px;
     margin-bottom: 41px; }
 
-  .content div.video .container div.video-wrap div.video-clip div.video-text {
-    left: 16%; }
-
   .content div.video .container div.video-wrap div.video-clip div.video-text .btn {
     margin: 0;
     max-width: 132px;
@@ -109,6 +113,10 @@
 
   .content div.introduce {
     margin-top: -55px; }
+
+  .content div.video .container div.video-wrap div.video-clip div.video-text {
+    position: absolute;
+    top: 24%; }
 
   .content div.introduce .container div.introduce-inner div.introduce-box,
   .content div.introduce .container div.introduce-inner div.introduce-content {
@@ -228,7 +236,8 @@
     padding: 0 46px 49px; }
 
   .footer-content .footer-logo {
-    flex: 1; }
+    flex: 1;
+    margin-bottom: 16px; }
 
   .footer-content .footer-logo img {
     margin-top: 6px;
@@ -317,10 +326,286 @@
     padding: 0 26px 49px; } }
 @media (max-width: 668px) {
   .content div.create .container div.create-inner div.create-image img {
-    width: 57.5%;
     object-fit: cover; }
 
   .header .container .header-wrap .header-navbar .navbar-list > .navbar-item:first-child {
-    display: none; } }
+    display: none; }
+
+  .content div.video::before {
+    display: none; }
+
+  .content div.video {
+    padding-bottom: 200px; }
+
+  .content div.introduce .container div.introduce-inner {
+    padding: 0px 0 78px; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-box, .content div.introduce .container div.introduce-inner div.introduce-content {
+    margin: 0;
+    padding: 0 15px;
+    max-width: 50%;
+    flex: 0 0 50%; }
+
+  .content div.introduce .container div.introduce-inner {
+    flex-wrap: wrap; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-box:first-child {
+    position: relative;
+    top: -90px; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-box:nth-child(2) {
+    padding-top: 110px; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-content h2 {
+    font-size: 35px;
+    line-height: 40px;
+    margin-bottom: 17px;
+    padding-top: 40px; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-content p {
+    font-size: 18px;
+    line-height: 25px; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-content {
+    margin: 0;
+    padding: 0 15px;
+    max-width: 75%;
+    flex: 0 0 75%; }
+
+  .content .user {
+    padding: 0; }
+
+  .content .user .container .user-list {
+    flex-wrap: wrap;
+    padding: 0 50px; }
+
+  .content .user .container .user-list .user-item {
+    max-width: 100%;
+    flex: 0 0 100%;
+    padding-bottom: 21px; }
+
+  .content .user .container .user-list .user-item .user-inner img {
+    height: 100%;
+    max-width: 100%; }
+
+  .content .brand .container ul.brand-list {
+    flex-wrap: wrap;
+    margin: 0 -15px 58px;
+    justify-content: center; }
+
+  li.brand-item {
+    max-width: 50%;
+    flex: 50%;
+    padding: 0 15px 30px; }
+
+  .content .plan .container h1 {
+    font-size: 32px;
+    line-height: 27px; }
+
+  .content .plan {
+    text-align: center;
+    padding: 45px 0 40px; }
+
+  .content div.register .container h1 {
+    margin-bottom: 20px; } }
+@media (max-width: 606px) {
+  .content div.video .container div.video-wrap div.video-clip div.video-text {
+    padding: 0 60px; }
+
+  .swiper-button-next::after, .swiper-button-prev::after {
+    right: 16px; }
+
+  .swiper-button-prev, .swiper-rtl .swiper-button-next {
+    left: 2px;
+    right: auto; }
+
+  .content div.video .container div.video-wrap div.video-clip div.video-text h1 {
+    font-size: 28px;
+    margin-bottom: 12px; }
+
+  .content div.create .container div.create-inner div.create-image img {
+    object-fit: cover;
+    width: 100%; }
+
+  .content div.create .container div.create-inner div.create-content p,
+  .content div.create .container div.create-inner div.create-content div.create-control {
+    display: none; }
+
+  .content .create-text__mb {
+    display: block;
+    margin-top: 16px; }
+    .content .create-text__mb .create-control {
+      display: flex;
+      justify-content: space-between; }
+      .content .create-text__mb .create-control .btn {
+        margin: 0;
+        max-width: 180px;
+        height: 50px;
+        font-size: 18px; }
+
+  .content div.create .container div.create-inner div.create-content {
+    top: 5%;
+    text-shadow: 0 0 1px black; }
+
+  .content div.create {
+    margin-bottom: 36px; }
+
+  .content div.video .container div.video-wrap {
+    padding: 60px 0 0; }
+
+  .content div.introduce {
+    margin-top: -50px; }
+
+  .content div.video .container div.video-wrap div.video-clip img {
+    height: 272px; } }
+@media (max-width: 588px) {
+  .header .container .header-wrap .header-navbar .navbar-list > .navbar-item:nth-child(2) {
+    display: none; }
+
+  .swiper-button-next::after, .swiper-button-prev::after {
+    padding: 16px;
+    height: 35px; }
+
+  .swiper-button-next, .swiper-rtl .swiper-button-prev {
+    right: 0px;
+    left: auto; }
+
+  .swiper-button-prev, .swiper-rtl .swiper-button-next {
+    left: -4px;
+    right: auto; }
+
+  .content div.video .container div.video-wrap div.video-clip div.video-text {
+    padding: 0 50px; }
+
+  .content div.video .container div.video-wrap {
+    padding: 34px 0 0; }
+
+  .content div.introduce {
+    margin-top: -44px; }
+
+  .footer-content {
+    flex-direction: column; }
+
+  .copyright {
+    padding-top: 20px;
+    flex-direction: column;
+    align-items: self-start; }
+
+  .copyright-box {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px; }
+
+  .footer .container .footer-inner {
+    padding: 40px 0 20px; }
+
+  .footer-content {
+    display: flex;
+    padding: 0 26px 0px; }
+
+  .content div.register .container h1 {
+    font-size: 23px; } }
+@media (max-width: 500px) {
+  .header .container .header-wrap .header-navbar .navbar-list > .navbar-item:nth-child(3) {
+    display: none; }
+
+  .content div.create .container div.create-inner div.create-content {
+    max-width: 300px; }
+
+  .content .create-text__mb .create-control .btn {
+    margin: 0;
+    max-width: 143px;
+    height: 40px;
+    font-size: 14px; }
+
+  .content div.introduce {
+    margin-top: -38px; }
+
+  .content div.video .container div.video-wrap div.video-clip div.video-text h1 {
+    font-size: 24px;
+    margin-bottom: 4px; }
+
+  .content div.video .container div.video-wrap div.video-clip img {
+    height: 264px; }
+
+  .content div.video .container div.video-wrap div.video-clip div.video-text {
+    position: absolute;
+    top: 16%; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-box, .content div.introduce .container div.introduce-inner div.introduce-content {
+    margin: 0;
+    padding: 0 15px;
+    max-width: 80%;
+    flex: 0 0 80%; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-box:nth-child(2) {
+    padding-top: 0; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-box:nth-child(2) {
+    padding-top: 0px;
+    margin: -40px 0 0 20%; }
+
+  .content div.introduce .container div.introduce-inner div.introduce-content {
+    margin: 0;
+    padding: 0 15px;
+    max-width: 100%;
+    flex: 0 0 100%; }
+
+  .content div.register .container div.register-controls {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; }
+
+  .content div.register .container span.register-text {
+    display: none; }
+
+  .content div.register .container span.register-text__mb {
+    margin: 10px 0;
+    padding: 0; }
+
+  .content div.register .container div.register-controls {
+    margin-bottom: 54px; } }
+@media (max-width: 430px) {
+  .content div.video .container div.video-wrap div.video-clip div.video-text h1 {
+    font-size: 22px;
+    margin-bottom: 0px; }
+
+  .content div.video .container div.video-wrap div.video-clip div.video-text .btn {
+    margin: 0;
+    max-width: 100px;
+    height: 26px;
+    font-size: 11px; }
+
+  .content .user .container .user-list {
+    margin: 0 0 40px; }
+
+  .content .user .container .user-list .user-item .user-inner .user-text h3 {
+    font-size: 22px;
+    line-height: 28px; }
+
+  .content .user .container .user-list .user-item .user-inner .user-text {
+    left: 17px; } }
+@media (max-width: 406px) {
+  .header .container .header-wrap .header-navbar .navbar-list > .navbar-item:nth-child(4) {
+    display: none; }
+
+  .content .create-text__mb p {
+    font-size: 14px;
+    line-height: 20px; }
+
+  .content div.introduce {
+    margin-top: -32px; } }
+@media (max-width: 375px) {
+  .content div.create .container div.create-inner div.create-content {
+    max-width: 280px; }
+
+  .content div.create .container div.create-inner div.create-content h1 {
+    font-size: 36px; }
+
+  .content div.video .container div.video-wrap div.video-clip div.video-text h1 {
+    font-size: 20px; }
+
+  .content div.register .container {
+    max-width: 307px; } }
 
 /*# sourceMappingURL=reponsive.css.map */
