--- a/lib/scss/style.css
+++ b/lib/scss/style.css
@@ -366,6 +366,8 @@ button {
             width: 62.5%;
             height: 100%;
             box-shadow: 0px 3px 15px #00000038; }
+  .content .create-text__mb {
+    display: none; }
   .content div.video {
     background: #f7f7f7;
     position: relative; }
@@ -394,19 +396,22 @@ button {
           .content div.video .container div.video-wrap div.video-clip div.video-text {
             position: absolute;
             top: 30%;
-            left: 15%;
+            left: 0%;
             transform: translate(-50%, -50%);
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             display: none;
-            z-index: 1; }
+            z-index: 1;
+            width: 100%;
+            padding: 0 80px; }
             .content div.video .container div.video-wrap div.video-clip div.video-text h1 {
               font-family: 'Playfair Display';
               font-weight: 900;
               font-size: 60px;
               font-style: normal;
+              text-shadow: 0 0 10px #000000;
               margin-bottom: 61px;
               line-height: 80px;
               color: #ffffff; }
@@ -583,6 +588,8 @@ button {
         font-weight: 500;
         font-family: 'Raleway';
         font-size: 21px; }
+  .content .register-text__mb {
+    display: none; }
   .content .brand {
     text-align: center; }
     .content .brand .container {
