--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -533,6 +533,10 @@ button {
             } 
         }        
     }
+
+    .create-text__mb {
+        display: none;
+    }
     // End
 
     // Video begin
@@ -572,7 +576,7 @@ button {
                     div.#{$vid}-text {
                         position: absolute;
                         top: 30%;
-                        left: 15%;
+                        left: 0%;
                         transform: translate(-50%, -50%);
                         display: flex;
                         flex-direction: column;
@@ -580,6 +584,9 @@ button {
                         align-items: center;
                         display: none;
                         z-index: 1;
+                        width: 100%;
+                        padding: 0 80px;
+
 
                         h1 {
                             font: {
@@ -589,6 +596,7 @@ button {
                                 style: normal;
                             }
     
+                            text-shadow: 0 0 10px $black-color;
                             margin-bottom: 61px;
                             line-height: 80px;
                             color: $white-color;
@@ -877,6 +885,10 @@ button {
                 }
             }
         }
+    }
+
+    .register-text__mb {
+        display: none;
     }
     // End
 
