--- a/lib/scss/reponsive.css
+++ b/lib/scss/reponsive.css
@@ -564,7 +564,10 @@
     padding: 0; }
 
   .content div.register .container div.register-controls {
-    margin-bottom: 54px; } }
+    margin-bottom: 54px; }
+
+  .content div.register .container div.register-controls span.register-text__mb {
+    display: block; } }
 @media (max-width: 430px) {
   .content div.video .container div.video-wrap div.video-clip div.video-text h1 {
     font-size: 22px;
