--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -496,6 +496,7 @@ button {
                             display: flex;
                             align-items: center;
                             justify-content: center;
+                            position: relative;
 
                             &:nth-child(2) {
                                 background-color: $white-color;
@@ -503,20 +504,15 @@ button {
                                 color: $primary-color;
 
                                 &:hover {
-                                    background-color: $primary-color;
+                                    background: $primary-color;
                                     color: $white-color;
+                                    
                                 }
                             }
 
                             &:nth-child(1) {
                                 background-color: $primary-color;
                                 color: $white-color;
-
-                                &:hover {
-                                    background: transparent;
-                                    color: $primary-color;
-                                    border: 3px solid $primary-color;
-                                }
                             }
                         }
                     }
@@ -604,6 +600,19 @@ button {
     
                         .btn {
                             border: none;
+                            cursor: pointer;
+                            position: relative;
+                            box-sizing: border-box;
+                            overflow: hidden;
+
+                            &:hover .eff-2 {
+                                top: 0;
+                            }
+
+                            &:hover span {
+                                color: $white-color;
+                                z-index: 10;
+                            }
                         }
                     }
                 }
@@ -861,6 +870,7 @@ button {
                     margin: 0 0 0 27px;
                     background: $primary-color;
                     color: $white-color;
+                    transition: all .3s linear;
 
                     &:hover {
                         background: transparent;
@@ -885,10 +895,6 @@ button {
                 }
             }
         }
-    }
-
-    .register-text__mb {
-        display: none;
     }
     // End
 
@@ -1128,4 +1134,64 @@ button {
 
 .swiper-css-mode>.swiper-wrapper>.swiper-slide {
     scroll-snap-align: inherit;
+}
+
+.content div.register .container div.register-controls span.register-text__mb {
+    display: none;
+}
+
+.btn-5 {
+    border: 0 solid;
+    box-shadow: inset 0 0 20px #ffffff00;
+    outline: 1px solid;
+    outline-color: #ffffff80;
+    outline-offset: 0px;
+    text-shadow: none;
+    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.btn-5:hover {
+    border: 1px solid;
+    box-shadow: inset 0 0 20px #ffffff80, 0 0 20px #ffffff33;
+    outline-color: #ffffff00;
+    outline-offset: 15px;
+    text-shadow: 1px 1px 2px #427388;
+}
+
+.btn-4 {
+    border: 1px solid;
+    overflow: hidden;
+    position: relative;
+}
+
+.btn-4:after {
+    background: #fff;
+    content: "";
+    height: 155px;
+    left: -75px;
+    opacity: 0.2;
+    position: absolute;
+    top: -50px;
+    transform: rotate(35deg);
+    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+    width: 50px;
+    z-index: 999;
+}
+
+.btn-4:hover {
+    &:after {
+      left: 120%;
+      transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+    }
+}
+
+.eff-2 {
+    width: 100%;
+    height: 100%;
+    top: -65px;
+    left: 0;
+    background: $primary-color;
+    position: absolute;
+    transition: all .5s ease;
+    z-index: 1;
 }
