--- a/lib/scss/reponsive.scss
+++ b/lib/scss/reponsive.scss
@@ -752,7 +752,18 @@
     .content div.register .container div.register-controls span.register-text__mb {
         display: block;
     }
+
+    .content div.introduce .container div.introduce-inner div.introduce-content h2 {
+        font-size: 28px;
+        line-height: 36px;
+    }
+
+    .content div.introduce .container div.introduce-inner div.introduce-content p {
+        font-size: 16px;
+        line-height: 22px;
+    }
 }
+
 
 @media (max-width: 430px) {
     .content div.video .container div.video-wrap div.video-clip div.video-text h1 {
